--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,11 @@
           ></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-            <li><a href="#">Profile</a></li>
+            <li>
+              <a href="{{ url_for('profile', username=session['user']) }}"
+                >Profile</a
+              >
+            </li>
             <li><a href="#">New Task</a></li>
             <li><a href="#">Manage Categories</a></li>
             <li><a href="#">Log Out</a></li>
@@ -54,7 +58,11 @@
           </h4>
         </li>
         <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-        <li><a href="#">Profile</a></li>
+        <li>
+          <a href="{{ url_for('profile', username=session['user']) }}"
+            >Profile</a
+          >
+        </li>
         <li><a href="#">New Task</a></li>
         <li><a href="#">Manage Categories</a></li>
         <li><a href="#">Log Out</a></li>
