--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
           ></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+            {% if session.user %}
             <li>
               <a href="{{ url_for('profile', username=session['user']) }}"
                 >Profile</a
@@ -43,9 +44,11 @@
             </li>
             <li><a href="#">New Task</a></li>
             <li><a href="#">Manage Categories</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
             <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
           </ul>
         </div>
       </nav>
@@ -58,6 +61,7 @@
           </h4>
         </li>
         <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+        {% if session.user %}
         <li>
           <a href="{{ url_for('profile', username=session['user']) }}"
             >Profile</a
@@ -65,9 +69,11 @@
         </li>
         <li><a href="#">New Task</a></li>
         <li><a href="#">Manage Categories</a></li>
-        <li><a href="#">Log Out</a></li>
-        <li><a href="{{ url_for('login') }}#">Log In</a></li>
+        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+        {% else %}
+        <li><a href="{{ url_for('login') }}">Log In</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
+        {% endif %}
       </ul>
     </header>
 
